Fix residents page hero section h1's still overflowing to its hero image

--- a/src/assets/scss/pages/residents/residents.scss
+++ b/src/assets/scss/pages/residents/residents.scss
@@ -24,8 +24,9 @@
   }
 }
 
-@media screen and (max-width: 1649px) and (min-width: 992px) {
+@media screen and (max-width: 1919px) and (min-width: 992px) {
   .animation_word-rotation-mask {
+    height: 150px;
     .animated_text {
       top: 153px;
       .line-break {
